--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,91 +1,46 @@
+Size.userDto.name=Name should be at least 1 character long.
+ValidPassword.userDto.password=Password should between 8 - 50 characters long, containing at least 1 uppercase alphabet character, 1 lowercase alphabet character, 1 digital character and 1 special character.
+Size.userDto.matchingPassword=Matching Password should be at least 1 character long.
+Size.userDto.email=Email should be at least 1 character long.
+ValidEmail.userDto=Email should be valid
+PasswordMatches.userDto=Passwords do not match
 # Passay properties
-HISTORY_VIOLATION=Password matches one of {0} previous passwords.
-ILLEGAL_WORD=Password contains the dictionary word '{0}'.
-ILLEGAL_WORD_REVERSED=Password contains the reversed dictionary word '{0}'.
+HISTORY_VIOLATION=Password matches one of %1$s previous passwords.
+ILLEGAL_WORD=Password contains the dictionary word '%1$s'.
+ILLEGAL_WORD_REVERSED=Password contains the reversed dictionary word '%1$s'.
 ILLEGAL_DIGEST_WORD=Password contains a dictionary word.
 ILLEGAL_DIGEST_WORD_REVERSED=Password contains a reversed dictionary word.
-ILLEGAL_MATCH=Password matches the illegal pattern '{0}'.
-ALLOWED_MATCH=Password must match pattern '{0}'.
-ILLEGAL_CHAR=Password {1} the illegal character '{0}'.
-ALLOWED_CHAR=Password {1} the illegal character '{0}'.
-ILLEGAL_QWERTY_SEQUENCE=Password contains the illegal QWERTY sequence '{0}'.
-ILLEGAL_ALPHABETICAL_SEQUENCE=Password contains the illegal alphabetical sequence '{0}'.
-ILLEGAL_NUMERICAL_SEQUENCE=Password contains the illegal numerical sequence '{0}'.
-ILLEGAL_USERNAME=Password {1} the user id '{0}'.
-ILLEGAL_USERNAME_REVERSED=Password {1} the user id '{0}' in reverse.
-ILLEGAL_WHITESPACE=Password {1} a whitespace character.
-ILLEGAL_NUMBER_RANGE=Password {1} the number '{0}'.
-ILLEGAL_REPEATED_CHARS=Password contains {2} sequences of {0} or more repeated characters, but only {1} allowed: {3}.
-INSUFFICIENT_UPPERCASE=Password must contain {0} or more uppercase characters.
-INSUFFICIENT_LOWERCASE=Password must contain {0} or more lowercase characters.
-INSUFFICIENT_ALPHABETICAL=Password must contain {0} or more alphabetical characters.
-INSUFFICIENT_DIGIT=Password must contain {0} or more digit characters.
-INSUFFICIENT_SPECIAL=Password must contain {0} or more special characters.
-INSUFFICIENT_CHARACTERISTICS=Password matches {0} of {2} character rules, but {1} are required.
-INSUFFICIENT_COMPLEXITY=Password meets {1} complexity rules, but {2} are required.
-INSUFFICIENT_COMPLEXITY_RULES=No rules have been configured for a password of length {0}.
-SOURCE_VIOLATION=Password cannot be the same as your {0} password.
-TOO_LONG=Password must be no more than {1} characters in length.
-TOO_SHORT=Password must be {0} or more characters in length.
-TOO_MANY_OCCURRENCES=Password contains {1} occurrences of the character '{0}', but at most {2} are allowed.
-
-jakarta.validation.constraints.AssertFalse.message     = must be false
-jakarta.validation.constraints.AssertTrue.message      = must be true
-jakarta.validation.constraints.DecimalMax.message      = must be less than ${inclusive == true ? 'or equal to ' : ''}{value}
-jakarta.validation.constraints.DecimalMin.message      = must be greater than ${inclusive == true ? 'or equal to ' : ''}{value}
-jakarta.validation.constraints.Digits.message          = numeric value out of bounds (<{integer} digits>.<{fraction} digits> expected)
-jakarta.validation.constraints.Email.message           = must be a well-formed email address
-jakarta.validation.constraints.Future.message          = must be a future date
-jakarta.validation.constraints.FutureOrPresent.message = must be a date in the present or in the future
-jakarta.validation.constraints.Max.message             = must be less than or equal to {value}
-jakarta.validation.constraints.Min.message             = must be greater than or equal to {value}
-jakarta.validation.constraints.Negative.message        = must be less than 0
-jakarta.validation.constraints.NegativeOrZero.message  = must be less than or equal to 0
-jakarta.validation.constraints.NotBlank.message        = must not be blank
-jakarta.validation.constraints.NotEmpty.message        = must not be empty
-jakarta.validation.constraints.NotNull.message         = must not be null
-jakarta.validation.constraints.Null.message            = must be null
-jakarta.validation.constraints.Past.message            = must be a past date
-jakarta.validation.constraints.PastOrPresent.message   = must be a date in the past or in the present
-jakarta.validation.constraints.Pattern.message         = must match "{regexp}"
-jakarta.validation.constraints.Positive.message        = must be greater than 0
-jakarta.validation.constraints.PositiveOrZero.message  = must be greater than or equal to 0
-jakarta.validation.constraints.Size.message            = size must be between {min} and {max}
-
-org.hibernate.validator.constraints.CreditCardNumber.message        = invalid credit card number
-org.hibernate.validator.constraints.Currency.message                = invalid currency (must be one of {value})
-org.hibernate.validator.constraints.EAN.message                     = invalid {type} barcode
-org.hibernate.validator.constraints.Email.message                   = not a well-formed email address
-org.hibernate.validator.constraints.ISBN.message                    = invalid ISBN
-org.hibernate.validator.constraints.Length.message                  = length must be between {min} and {max}
-org.hibernate.validator.constraints.CodePointLength.message         = length must be between {min} and {max}
-org.hibernate.validator.constraints.LuhnCheck.message               = the check digit for ${validatedValue} is invalid, Luhn Modulo 10 checksum failed
-org.hibernate.validator.constraints.Mod10Check.message              = the check digit for ${validatedValue} is invalid, Modulo 10 checksum failed
-org.hibernate.validator.constraints.Mod11Check.message              = the check digit for ${validatedValue} is invalid, Modulo 11 checksum failed
-org.hibernate.validator.constraints.ModCheck.message                = the check digit for ${validatedValue} is invalid, {modType} checksum failed
-org.hibernate.validator.constraints.Normalized.message              = must be normalized
-org.hibernate.validator.constraints.NotBlank.message                = may not be empty
-org.hibernate.validator.constraints.NotEmpty.message                = may not be empty
-org.hibernate.validator.constraints.ParametersScriptAssert.message  = script expression "{script}" didn't evaluate to true
-org.hibernate.validator.constraints.Range.message                   = must be between {min} and {max}
-org.hibernate.validator.constraints.ScriptAssert.message            = script expression "{script}" didn't evaluate to true
-org.hibernate.validator.constraints.UniqueElements.message          = must only contain unique elements
-org.hibernate.validator.constraints.URL.message                     = must be a valid URL
-
-org.hibernate.validator.constraints.br.CNPJ.message                 = invalid Brazilian corporate taxpayer registry number (CNPJ)
-org.hibernate.validator.constraints.br.CPF.message                  = invalid Brazilian individual taxpayer registry number (CPF)
-org.hibernate.validator.constraints.br.TituloEleitoral.message      = invalid Brazilian Voter ID card number
-
-org.hibernate.validator.constraints.pl.REGON.message                = invalid Polish Taxpayer Identification Number (REGON)
-org.hibernate.validator.constraints.pl.NIP.message                  = invalid VAT Identification Number (NIP)
-org.hibernate.validator.constraints.pl.PESEL.message                = invalid Polish National Identification Number (PESEL)
-
-org.hibernate.validator.constraints.time.DurationMax.message        = must be shorter than${inclusive == true ? ' or equal to' : ''}${days == 0 ? '' : days == 1 ? ' 1 day' : ' ' += days += ' days'}${hours == 0 ? '' : hours == 1 ? ' 1 hour' : ' ' += hours += ' hours'}${minutes == 0 ? '' : minutes == 1 ? ' 1 minute' : ' ' += minutes += ' minutes'}${seconds == 0 ? '' : seconds == 1 ? ' 1 second' : ' ' += seconds += ' seconds'}${millis == 0 ? '' : millis == 1 ? ' 1 milli' : ' ' += millis += ' millis'}${nanos == 0 ? '' : nanos == 1 ? ' 1 nano' : ' ' += nanos += ' nanos'}
-org.hibernate.validator.constraints.time.DurationMin.message        = must be longer than${inclusive == true ? ' or equal to' : ''}${days == 0 ? '' : days == 1 ? ' 1 day' : ' ' += days += ' days'}${hours == 0 ? '' : hours == 1 ? ' 1 hour' : ' ' += hours += ' hours'}${minutes == 0 ? '' : minutes == 1 ? ' 1 minute' : ' ' += minutes += ' minutes'}${seconds == 0 ? '' : seconds == 1 ? ' 1 second' : ' ' += seconds += ' seconds'}${millis == 0 ? '' : millis == 1 ? ' 1 milli' : ' ' += millis += ' millis'}${nanos == 0 ? '' : nanos == 1 ? ' 1 nano' : ' ' += nanos += ' nanos'}
-
-ValidEmail.email=Invalid Email
-PasswordMatches.userDto=Passwords do not match
-
+ILLEGAL_MATCH=Password matches the illegal pattern '%1$s'.
+ALLOWED_MATCH=Password must match pattern '%1$s'.
+ILLEGAL_CHAR=Password %2$s the illegal character '%1$s'.
+ALLOWED_CHAR=Password %2$s the illegal character '%1$s'.
+ILLEGAL_QWERTY_SEQUENCE=Password contains the illegal QWERTY sequence '%1$s'.
+ILLEGAL_ALPHABETICAL_SEQUENCE=Password contains the illegal alphabetical sequence '%1$s'.
+ILLEGAL_NUMERICAL_SEQUENCE=Password contains the illegal numerical sequence '%1$s'.
+ILLEGAL_USERNAME=Password %2$s the user id '%1$s'.
+ILLEGAL_USERNAME_REVERSED=Password %2$s the user id '%1$s' in reverse.
+ILLEGAL_WHITESPACE=Password %2$s a whitespace character.
+ILLEGAL_NUMBER_RANGE=Password %2$s the number '%1$s'.
+ILLEGAL_REPEATED_CHARS=Password contains %3$s sequences of %1$s or more repeated characters, but only %2$s allowed: %4$s.
+INSUFFICIENT_UPPERCASE=Password must contain %1$s or more uppercase characters.
+INSUFFICIENT_LOWERCASE=Password must contain %1$s or more lowercase characters.
+INSUFFICIENT_ALPHABETICAL=Password must contain %1$s or more alphabetical characters.
+INSUFFICIENT_DIGIT=Password must contain %1$s or more digit characters.
+INSUFFICIENT_SPECIAL=Password must contain %1$s or more special characters.
+INSUFFICIENT_CHARACTERISTICS=Password matches %1$s of %3$s character rules, but %2$s are required.
+INSUFFICIENT_COMPLEXITY=Password meets %2$s complexity rules, but %3$s are required.
+INSUFFICIENT_COMPLEXITY_RULES=No rules have been configured for a password of length %1$s.
+SOURCE_VIOLATION=Password cannot be the same as your %1$s password.
+TOO_LONG=Password must be no more than %2$s characters in length.
+TOO_SHORT=Password must be %1$s or more characters in length.
+TOO_MANY_OCCURRENCES=Password contains %2$s occurrences of the character '%1$s', but at most %3$s are allowed.
+Exception.duplicate.title=Duplicate Item Found
+Exception.duplicate.username=username has been used
+Exception.duplicate.email=email has been used
+Exception.duplicate.mobile=mobile has been used
+Exception.invalid.otp=OTP code is not correct
+## Spring Security
+AbstractUserDetailsAuthenticationProvider.badCredentials=Bad credentials
 login.page.title=Login
 login.page.logout.msg=You have logged out.
 login.page.bad-credential=Username or password is wrong
